app/assets/stylesheets/_layouts.scss
.page-header {
  margin-top: 0;
  padding-top: 0;
  border: $primary solid 1px;
  border-bottom: $primary solid 5px;
  border-radius: 4px;
  background-color: rgba($primary, 0.2);
  h1 {
    padding-left: 20px;
    font-family: $font;
    font-style: italic;
    color: $secondary;
    text-shadow: $highlight 2px 2px;
  }
}

.footer {
  margin-top: 40px;
  border-top: $primary solid 1px;
  text-align: center;
  padding-top: 5px;
}

